mapserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mapserver
  namespace: mapserver
spec:
  selector:
    app: mapserver
  ports:
    - name: http
      port: 80
      targetPort: 80
